<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/collection_log_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/region_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/region_hint"
        android:textSize="@dimen/small_text_size" >
    </EditText>

    <EditText
        android:id="@+id/facility_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/facility_hint"
        android:textSize="@dimen/small_text_size" >
    </EditText>

    <EditText
        android:id="@+id/partner_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partner_hint"
        android:textSize="@dimen/small_text_size" >
    </EditText>

    <Button
        android:id="@+id/add_bag_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="myClickHandler"
        android:text="@string/add_bag_text"
        android:textSize="@dimen/small_text_size" >
    </Button>

    <Button
        android:id="@+id/submit_data_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:onClick="myClickHandler"
        android:text="@string/submit_data_text"
        android:textSize="@dimen/small_text_size" >
    </Button>

</LinearLayout>