<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreen" >

    <EditText android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/username_hint">
    </EditText>
        
    <EditText android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/password_hint"
        android:inputType="textPassword">
    </EditText>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <Button android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="@integer/half_weight"
            android:onClick="myClickHandler"
            android:text="@string/login_text"
            android:textSize="@dimen/small_text_size">     
        </Button>
        
        <Button android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_size"
            android:layout_weight="@integer/half_weight"
            android:onClick="myClickHandler"
            android:text="@string/exit_text"
            android:textSize="@dimen/small_text_size">     
        </Button>
        
    </LinearLayout>
    
</LinearLayout>